--- a/Areas/Doctor/Views/Treatments/Details.cshtml
+++ b/Areas/Doctor/Views/Treatments/Details.cshtml
@@ -18,8 +18,8 @@
             <i class="bi bi-clipboard2-pulse text-primary me-2"></i>
             Treatment Details
         </h1>
-        <a asp-action="Index" class="btn btn-outline-secondary">
-            <i class="bi bi-arrow-left"></i> Back to Treatments
+        <a asp-action="Index" class="back-button">
+            <i class="bi bi-arrow-left"></i> Back
         </a>
     </div>
 
