--- a/Views/Leave/Cancel.cshtml
+++ b/Views/Leave/Cancel.cshtml
@@ -53,7 +53,7 @@
                         <input type="hidden" asp-for="Id" />
                         <div class="form-group mt-4">
                             <button type="submit" class="btn btn-danger">Confirm Cancel</button>
-                            <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                            <a asp-action="Index" class="back-button">Back</a>
                         </div>
                     </form>
                 </div>
